# client-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ic.yml  liens.yml  pypi.yml  test.yaml  tests.yaml  tests.yml
client_constellation/: client.py  serveur.py  sync.py  utils.py
constellationPy/: __init__.py  client.py  const.py  serveur.py  sync.py  utils.py
tests/: test_client.py  test_client_constellation.py  test_serveur.py  test_sync.py  test_utils.py  utils.py
tests/ressources/: _serveur.py  faux_serveur.py
