[tool.poetry]
name = "constellationPy"
version = "0.2.0"
description = "Client Python pour le réseau Constellation."
authors = ["Julien Jean Malard-Adam <julien.malard@mail.mcgill.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
trio-websocket = "^0.9.2"
pandas = "^1.3.4"
trio = "0.22.0"
semantic-version = "^2.8.5"
click = "^8.0.3"
click-default-group = "^1.2.2"
urllib3 = "^1.26.11"
appdirs = "^1.4.4"
pytest-trio = "0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
