[tool.poetry]
name = "constellationPy"
version = "0.2.5"
description = "Client Python pour le réseau Constellation."
authors = ["Julien Jean Malard-Adam <julien.malard@mail.mcgill.ca>"]

[tool.poetry.dependencies]
python = "^3.10"
trio-websocket = "^0.11.0"
pandas = "^2.0.3"
trio = "^0.23.1"
semantic-version = "^2.8.5"
click = "^8.0.3"
click-default-group = "^1.2.2"
urllib3 = "^2.0.4"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-trio = "0.8.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
